# pySigma-backend-loki

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  getting_started.md  print-coverage.py  pyproject.toml  renovate.json
.githooks/: pre-commit
.github/: CODEOWNERS  zizmor.yml
.github/workflows/: codeql.yml  integration.yml  mark-as-done.yaml  release.yml  test.yml  validate-renovate.yml  zizmor.yml
sigma/: shared.py
sigma/backends/loki/: __init__.py  deferred.py  loki.py
sigma/pipelines/loki/: __init__.py  loki.py
tests/: sigma_backend_tester.py  test_backend_loki.py  test_backend_loki_add_line_filters.py  test_backend_loki_add_line_filters_case_insensitive.py  test_backend_loki_case_sensitive.py  test_backend_loki_event_count_correlation.py  test_backend_loki_field_modifiers.py  test_backend_loki_fieldref.py  test_backend_loki_fields.py  test_backend_loki_line_filters.py  test_backend_loki_value_count_correlation.py  test_backend_negation_loki.py  test_pipelines_loki.py  test_pysigma_integration.py  test_sigma_cli_integration.sh  test_sigma_rule.yml
