[tool.poetry]
name = "pySigma-backend-loki"
version = "0.12.4"
description = "pySigma Loki backend"
readme = "README.md"
authors = [
    "Nick Moore <nicholas.moore@grafana.com>",
    "Mostafa Moradian <mostafa.moradian@grafana.com>",
]
license = "AGPL-3.0-only"
repository = "https://github.com/grafana/pySigma-backend-loki"
packages = [{ include = "sigma" }]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.22"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.2"
mypy = { extras = ["faster-cache"], version = "^1.16.0" }
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
ruff = "^0.2.2"
types-pyyaml = "6.0.12.12"

[tool.ruff]
exclude = ["dist", "build", "env", "venv", ".env", ".venv"]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
