[tool.poetry]
name = "pySigma-backend-loki"
version = "0.13.0"
description = "pySigma Loki backend"
readme = "README.md"
authors = [
    "Nick Moore <nicholas.moore@grafana.com>",
]
license = "AGPL-3.0-only"
repository = "https://github.com/grafana/pySigma-backend-loki"
packages = [{ include = "sigma" }]

[tool.poetry.dependencies]
python = "^3.10"
pysigma = "^1.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.12.0"
mypy = { extras = ["faster-cache"], version = "^1.19.0" }
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mypy = "^1.0.0"
ruff = "^0.14.0"
types-pyyaml = "^6.0.12"

[tool.ruff]
exclude = ["dist", "build", "env", "venv", ".env", ".venv"]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
